--- a/02.input_data_binding/index.html
+++ b/02.input_data_binding/index.html
@@ -15,7 +15,7 @@
   <div id="app">
     <form id="app-form">
       <input type="text" v-model="input_name" placeholder="Digite seu nome aqui">
-      <input type="submit" value="Enviar" v-on:click="submitForm">
+      <input type="submit" value="Enviar" v-on:citForm">
     </form>
     <p>O seu nome é: {{ name }} </p>
     <p>Data binding: {{input_name}} </p>
